# ChoreChampion

./: App-creation.md  CLAUDE.md  Design-Doc.md  README.md  setup.sql
backend/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  chore.py  chore_submission.py  device.py  difficulty_reward.py  family_member.py  household.py  join_token.py  reward_category.py
backend/app/routers/: chores.py  devices.py  households.py  members.py  rewards.py  submissions.py
backend/app/schemas/: chore.py  device.py  household.py  member.py  reward.py  submission.py
backend/app/services/: cadence.py  rewards.py  submission_rules.py
backend/migrations/: 001_timezone_ssid_jointokens.sql
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_full_flow.py  test_members.py  test_reward_config.py
backend/tests/unit/: test_cadence.py
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/app/: router.dart  theme.dart
flutter_app/lib/core/: api_client.dart  constants.dart  secure_storage.dart  wifi_service.dart
flutter_app/lib/core/models/: chore.dart  household.dart  reward.dart  submission.dart
flutter_app/lib/features/admin/providers/: admin_providers.dart
flutter_app/lib/features/admin/screens/: admin_panel_screen.dart
flutter_app/lib/features/admin/services/: admin_service.dart
flutter_app/lib/shared/widgets/: difficulty_badge.dart  responsive_scaffold.dart
(+20 files in other folders)
